--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^17.0.51",
-    "@types/react-dom": "^17.0.17",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "axios": "^1.1.3",
     "chart.js": "^3.9.1",
     "chartjs-chart-wordcloud": "^3.10.0",
@@ -25,9 +25,9 @@
     "formik": "^2.2.9",
     "npm": "^8.19.2",
     "postcss-cli": "^10.0.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
@@ -42,7 +42,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "coverage": "yarn test --coverage --watchAll --collectCoverageFrom='src/components/**/*.{ts,tsx}' collectCoverageFrom='!src/components/**/*.{types,stories,constants,test,spec}.{ts,tsx}' collectCoverageFrom='!src/components/**/index.ts'"
   },
   "eslintConfig": {
     "extends": [
@@ -77,5 +78,15 @@
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.1",
     "typescript-plugin-css-modules": "^3.4.0"
+  },
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": -10
+      }
+    }
   }
 }
